# swp25-tutorial

./: CMakeLists.txt  README.md
.github/workflows/: ci_coverage.yml  ci_linux.yml  ci_macos.yml  lint.yml
cmake/test/: add_local_data.cmake  config.cmake  declare_datasource.cmake
src/: CMakeLists.txt  main.cpp
test/: cli_fastq_coversion_test.cpp
